# quark

./: .clang_complete  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  Game Engine.sln  Game Engine.vcxproj  Game Engine.vcxproj.filters  Makefile  license.txt  makefile  readme.md
Java Version/Engine/: .classpath
Java Version/Engine/src/it/filippocrocchini/engine/common/: Color.java  Engine.java  GameObject.java  Toggleable.java
Java Version/Engine/src/it/filippocrocchini/engine/common/component/: Component.java  Renderable.java  Updatable.java
Java Version/Engine/src/it/filippocrocchini/engine/common/graphics/: Camera.java  Transform.java
Java Version/Engine/src/it/filippocrocchini/engine/common/graphics/model/: Material.java  Mesh.java  Model.java  Primitive.java
Java Version/Engine/src/it/filippocrocchini/engine/common/graphics/particles/: Particle.java  ParticleBatch.java  ParticleEmitter.java  ParticleSystem.java
Java Version/Engine/src/it/filippocrocchini/engine/common/graphics/shaders/: Shader.java  ShaderProgram.java
Java Version/Engine/src/it/filippocrocchini/engine/common/physics/: RigidBody.java
Java Version/Engine/src/it/filippocrocchini/engine/common/resource/: FutureResource.java  Resource.java
Java Version/Engine/src/it/filippocrocchini/engine/core/: GameObjectManager.java  Renderer.java  Updater.java  Utils.java
Java Version/Engine/src/it/filippocrocchini/engine/core/particles/: ParticleManager.java
Java Version/Engine/src/it/filippocrocchini/engine/core/resource/: ResourceLoader.java
Java Version/Engine/src/it/filippocrocchini/engine/removed/: FragmentShader.java  Model.java  ShaderResource.java  VertexShader.java
Java Version/SpaceShip/: .classpath
Java Version/SpaceShip/assets/: model.dae  ship.dae
Java Version/SpaceShip/assets/shaders/: Debug.shader  Particle.shader  Phong.shader
Java Version/SpaceShip/shaderutils/: myparser.py  shader.py
Java Version/SpaceShip/src/it/filippocrocchini/spaceship/: Asteroids3D.java
Java Version/SpaceShip/src/it/filippocrocchini/spaceship/components/: AsteroidGraphics.java  ShipGraphics.java  TestParticleSystem.java
Java Version/SpaceShip/src/it/filippocrocchini/spaceship/components/controllers/: PlayerController.java
Java Version/SpaceShip/src/it/filippocrocchini/spaceship/objects/: Debris.java  Ship.java
Java Version/SpaceShip/src/it/filippocrocchini/spaceship/objects/asteroid/: Asteroid.java  AsteroidField.java
Java Version/SpaceShip/src/it/filippocrocchini/spaceship/removed/: CrappyGame.java  FPSLoggerComponent.java  RectangleComponent.java  Start.java  TestGameObject.java
app/: CMakeLists.txt
app/assets/shaders/: sprite.fs  sprite.vs
app/include/: button.h  game_screen.h  level.h  loading_bar.h  loading_screen.h  menu_screen.h  player.h
app/src/: button.cpp  game_screen.cpp  level.cpp  loading_bar.cpp  loading_screen.cpp  main.cpp  menu_screen.cpp  player.cpp
assets/: basic.f  basic.shader  basic.v
cmake-modules/: FindASSIMP.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindGTEST.cmake  FindSOIL2.cmake
include/: CMakeLists.txt  camera.h  component.h  components.h  engine.h  gameobject.h  graphic_components.h  looping_thread.h  main.h  material.h  quark.h  registry.h  renderer.h  resource.h  resource_loader.h  scene.h  shader.h  sprite.h  spritebatch.h  stage.h  texture.h  thread_safe_queue.h  threadpool.h  toggleable.h  window.h
include/core/: engine.h  utils.h
include/core/graphics/: window.h
include/core/managers/: input.h  render.h  resource.h  scene.h  update.h
include/core/models/: mesh.h
include/core/object/: gameobject.h
include/core/resources/: shader.h  textfile.h  texture.h
include/core/threads/: mythread.h  thread_safe_container.h  thread_safe_queue.h  threadpool.h  updater.h
quark_test/: CMakeLists.txt
src/: CMakeLists.txt  camera.cpp  components.cpp  engine.cpp  gameobject.cpp  input.cpp  looping_thread.cpp  main.cpp  material.cpp  quark.cpp  render.cpp  renderer.cpp  resource_loader.cpp  scene.cpp  shader.cpp  sprite.cpp  spritebatch.cpp  stage.cpp  texture.cpp  thread_safe_queue.cpp  threadpool.cpp  update.cpp  window.cpp
src/core/: engine.cpp  utils.cpp
src/core/graphics/: window.cpp
src/core/managers/: input.cpp  render.cpp  resource.cpp  scene.cpp  update.cpp
src/core/object/: gameobject.cpp
src/core/resources/: shader.cpp  textfile.cpp  texture.cpp
src/core/threads/: mythread.cpp  threadpool.cpp
test/: CMakeLists.txt
test/basic/: CMakeLists.txt  open_window.cpp
test/looping_thread/: CMakeLists.txt  loop_controller.cpp  looping_thread.cpp
test/quark/: CMakeLists.txt  load_resource.cpp
test/resource_loader/: .load_dummy.cpp.kate-swp  CMakeLists.txt  load_dummies.cpp  load_dummy.cpp
test/scene/: CMakeLists.txt  gameobject_components.cpp  scene.cpp
